--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+manifest-dev/
+manifest-staging/
+manifest-production/
 power/coverage/
 power/dist/
 power/documentation/
