--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -25,7 +25,7 @@ podSecurityContext:
   # fsGroup: 2000
 
 securityContext:
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: true
   runAsUser: 1000
 
