--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -355,7 +355,7 @@ package:development:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build --pull -t "$CI_REGISTRY_IMAGE:latest" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
-    - trivy image --no-progress --clear-cache --exit-code 1 "$CI_REGISTRY_IMAGE:latest"
+    - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:latest"
     - docker push "$CI_REGISTRY_IMAGE:latest"
   only:
     - dev
@@ -373,7 +373,7 @@ package:staging:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build --pull -t "$CI_REGISTRY_IMAGE:staging" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
-    - trivy image --no-progress --clear-cache --exit-code 1 "$CI_REGISTRY_IMAGE:staging"
+    - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:staging"
     - docker push "$CI_REGISTRY_IMAGE:staging"
   only:
     - staging
@@ -391,7 +391,7 @@ package:production:
     - i=0; while [ "$i" -lt 12 ]; do docker info &> /dev/null && break; sleep 5; i=$(( i + 1 )) ; done
     - echo "$CI_REGISTRY_PASSWORD" | docker login --username "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build --pull -t "$CI_REGISTRY_IMAGE:production" --build-arg=COMMIT="$CI_COMMIT_SHORT_SHA" --build-arg=BRANCH="$CI_COMMIT_REF_NAME" .
-    - trivy image --no-progress --clear-cache --exit-code 1 "$CI_REGISTRY_IMAGE:production"
+    - trivy image --no-progress --exit-code 1 "$CI_REGISTRY_IMAGE:production"
     - docker push "$CI_REGISTRY_IMAGE:production"
   only:
     - production
