--- a/power/src/assets/config/config.json
+++ b/power/src/assets/config/config.json
@@ -4,8 +4,9 @@
         "bodenwertkalkulator",
         "immobilienpreisindex",
         "immobilienpreiskalkulator",
-        "grundstuecksmarktdaten",
-	"gmb",
+        "grundstuecksmarktberichte",
+        "landesgrundstuecksmarktdaten",
+        "gmb",
         "forms",
         "feedback",
         "login"
