--- a/chart/power/values-production.yaml
+++ b/chart/power/values-production.yaml
@@ -83,9 +83,11 @@ affinity: {}
 
 config:
   modules:
-    - "immobilienpreisindex"
     - "bodenrichtwerte"
+    - "immobilienpreisindex"
     - "immobilienpreiskalkulator"
-    - "grundstuecksmarktdaten"
+    - "grundstuecksmarktberichte"
+    - "landesgrundstuecksmarktdaten"
+    - "gmb"
     - "feedback"
   authentication: true
