--- a/chart/power/values-dev.yaml
+++ b/chart/power/values-dev.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: de.icr.io/power/power
   pullPolicy: Always
-  tag: "latest"
+  tag: latest
 
 imagePullSecrets:
   - name: de-icr-io
