Added pod labels

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -409,6 +409,7 @@ deploy:development:
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
     - helm upgrade power ./chart/power -n dev -f ./chart/power/values-dev.yaml --install
+      --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
     - dev
 
@@ -427,6 +428,7 @@ deploy:staging:
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
     - helm upgrade power ./chart/power -n staging -f ./chart/power/values-staging.yaml --install
+      --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
     - staging
 
@@ -445,5 +447,6 @@ deploy:production:
     - kubectl config set-context default --cluster=k8s --user="$KUBE_DEPLOY_SECRET_NAME"
     - kubectl config use-context default
     - helm upgrade power ./chart/power -n prod -f ./chart/power/values-production.yaml --install
+      --set labels.commit="$CI_COMMIT_SHORT_SHA"
   only:
     - production
