--- a/chart/power/values-staging.yaml
+++ b/chart/power/values-staging.yaml
@@ -14,6 +14,9 @@ imagePullSecrets:
 nameOverride: ""
 fullnameOverride: ""
 
+labels:
+  commit: ""
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: false
