--- a/power/angular.json
+++ b/power/angular.json
@@ -26,7 +26,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "localize": false,
+                        "localize": true,
                         "aot": true,
                         "outputPath": "dist/power",
                         "index": "src/index.html",
