Update boris-alt API

--- a/nginx-default.conf
+++ b/nginx-default.conf
@@ -63,7 +63,7 @@ server {
   }
 
   location /boris-print/ {
-    rewrite ^\/boris-print\/(.*) /ent-boris/brwdirect?${BORIS_ALT}$1 break;
+    rewrite ^\/boris-print\/(.*) /ent-boris/brwdirect$1 break;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_ssl_server_name on;
     proxy_pass https://www.boris.niedersachsen.de/;
